Site html css 05

--- a/site/candidatNewton.html
+++ b/site/candidatNewton.html
@@ -10,11 +10,8 @@
     	<header>
             <a href="index.html"><img src="" alt="" width="" height="" /></a>
             <h1>Media Spot</h1>
-            <p class="slogan">Unify the difference</p>
             <div>
-                <a id="inscription" href="./inscription.html">S'inscrire</a>
-                <p> ou </p>
-                <a id="connexion" href="./connexion.html">Se connecter</a> 
+                <a id="connexion" href="./connexion.html">Se connecter</a>
             </div>           
         </header>
     	<nav class="principal">
@@ -100,6 +97,7 @@
                     </ol>
                 </article>
             </section>
+            <p id="pdf"><a href="">Téléchargez le CV en format PDF</a></p>
         </section>
     	<footer>
             <div class="contact">
