--- a/site/galerieCandidats.html
+++ b/site/galerieCandidats.html
@@ -10,11 +10,8 @@
     	<header>
             <a href="index.html"><img src="" alt="" width="" height="" /></a>
             <h1>Media Spot</h1>
-            <p class="slogan">Unify the difference</p>
             <div>
-                <a id="inscription" href="./inscription.html">S'inscrire</a>
-                <p> ou </p>
-                <a id="connexion" href="./connexion.html">Se connecter</a> 
+                <a id="connexion" href="./connexion.html">Se connecter</a>
             </div>           
         </header>
     	<nav class="principal">
@@ -26,39 +23,13 @@
     		</ul>
     	</nav>
     	<p class="ariane"><a href="./index.html">Accueil</a> &gt; <a href="">Candidats</a></p>
-    	<section id="rechercheCandidats">
-    		<h1>Trier par&nbsp;:</h1>
-    		<form method="" action="">
-    			<label class="specialites">Spécialités</label>
-    			<select class="specialites">
-    				<option>Rédacteur</option>
-    				<option>Rédacteur en chef</option>
-    				<option>Journaliste photographe</option>
-    			</select>
-    			<label class="region">Région</label>
-    			<select class="region">
-    				<option>Liège</option>
-    				<option>Verviers</option>
-    				<option>Namur</option>
-    				<option>Charleroi</option>
-    				<option>Bruxelles</option>
-    			</select>
-    			<label class="centreInterets">Centre d'intérêts</label>
-    			<select class="centreInterets">
-    				<option>CDD</option>
-    				<option>CDI</option>
-    				<option>Pigiste</option>
-    			</select>
-    			<input type="submit" value="ok" />
-    		</form>
-    	</section>
         <section id="listeCandidats">
     	   <h1>Les candidats</h1>
            <article>
                 <h1 class="hidden">Candidat</h1>
                 <img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="110" height="138" />
                 <p>
-                    Journaliste, pianiste et ingénieur du son. J'ai travaillé comme journaliste au JT de la RTBF pour l'actualité nationale et internationale.
+                    Journaliste, pianiste et ingénieur du son. J'ai travaillé comme journaliste au JT de la RTBF pour l'actualité nationale et internationale.<br />
                     <a href="./candidatNewton.html">Voir le profil</a>
                 </p>
            </article>
@@ -66,7 +37,7 @@
                 <h1 class="hidden">Candidat</h1>
                 <img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="110" height="138" />
                 <p>
-                    Journaliste, pianiste et ingénieur du son. J'ai travaillé comme journaliste au JT de la RTBF pour l'actualité nationale et internationale.
+                    Journaliste, pianiste et ingénieur du son. J'ai travaillé comme journaliste au JT de la RTBF pour l'actualité nationale et internationale.<br />
                     <a href="./candidatNewton.html">Voir le profil</a>
                 </p>
            </article>
@@ -74,7 +45,7 @@
                 <h1 class="hidden">Candidat</h1>
                 <img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="110" height="138" />
                 <p>
-                    Journaliste, pianiste et ingénieur du son. J'ai travaillé comme journaliste au JT de la RTBF pour l'actualité nationale et internationale.
+                    Journaliste, pianiste et ingénieur du son. J'ai travaillé comme journaliste au JT de la RTBF pour l'actualité nationale et internationale.<br />
                     <a href="./candidatNewton.html">Voir le profil</a>
                 </p>
            </article>
@@ -82,7 +53,7 @@
                 <h1 class="hidden">Candidat</h1>
                 <img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="110" height="138" />
                 <p>
-                    Journaliste, pianiste et ingénieur du son. J'ai travaillé comme journaliste au JT de la RTBF pour l'actualité nationale et internationale.
+                    Journaliste, pianiste et ingénieur du son. J'ai travaillé comme journaliste au JT de la RTBF pour l'actualité nationale et internationale.<br />
                     <a href="./candidatNewton.html">Voir le profil</a>
                 </p>
            </article>
@@ -90,7 +61,7 @@
                 <h1 class="hidden">Candidat</h1>
                 <img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="110" height="138" />
                 <p>
-                    Journaliste, pianiste et ingénieur du son. J'ai travaillé comme journaliste au JT de la RTBF pour l'actualité nationale et internationale.
+                    Journaliste, pianiste et ingénieur du son. J'ai travaillé comme journaliste au JT de la RTBF pour l'actualité nationale et internationale.<br />
                     <a href="./candidatNewton.html">Voir le profil</a>
                 </p>
            </article>
@@ -98,7 +69,7 @@
                 <h1 class="hidden">Candidat</h1>
                 <img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="110" height="138" />
                 <p>
-                    Journaliste, pianiste et ingénieur du son. J'ai travaillé comme journaliste au JT de la RTBF pour l'actualité nationale et internationale.
+                    Journaliste, pianiste et ingénieur du son. J'ai travaillé comme journaliste au JT de la RTBF pour l'actualité nationale et internationale.<br />
                     <a href="./candidatNewton.html">Voir le profil</a>
                 </p>
            </article>
@@ -106,7 +77,7 @@
                 <h1 class="hidden">Candidat</h1>
                 <img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="110" height="138" />
                 <p>
-                    Journaliste, pianiste et ingénieur du son. J'ai travaillé comme journaliste au JT de la RTBF pour l'actualité nationale et internationale.
+                    Journaliste, pianiste et ingénieur du son. J'ai travaillé comme journaliste au JT de la RTBF pour l'actualité nationale et internationale.<br />
                     <a href="./candidatNewton.html">Voir le profil</a>
                 </p>
            </article>
@@ -114,7 +85,7 @@
                 <h1 class="hidden">Candidat</h1>
                 <img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="110" height="138" />
                 <p>
-                    Journaliste, pianiste et ingénieur du son. J'ai travaillé comme journaliste au JT de la RTBF pour l'actualité nationale et internationale.
+                    Journaliste, pianiste et ingénieur du son. J'ai travaillé comme journaliste au JT de la RTBF pour l'actualité nationale et internationale.<br />
                     <a href="./candidatNewton.html">Voir le profil</a>
                 </p>
            </article>
@@ -122,7 +93,7 @@
                 <h1 class="hidden">Candidat</h1>
                 <img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="110" height="138" />
                 <p>
-                    Journaliste, pianiste et ingénieur du son. J'ai travaillé comme journaliste au JT de la RTBF pour l'actualité nationale et internationale.
+                    Journaliste, pianiste et ingénieur du son. J'ai travaillé comme journaliste au JT de la RTBF pour l'actualité nationale et internationale.<br />
                     <a href="./candidatNewton.html">Voir le profil</a>
                 </p>
            </article>
@@ -130,58 +101,35 @@
                 <h1 class="hidden">Candidat</h1>
                 <img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="110" height="138" />
                 <p>
-                    Journaliste, pianiste et ingénieur du son. J'ai travaillé comme journaliste au JT de la RTBF pour l'actualité nationale et internationale.
+                    Journaliste, pianiste et ingénieur du son. J'ai travaillé comme journaliste au JT de la RTBF pour l'actualité nationale et internationale.<br />
                     <a href="./candidatNewton.html">Voir le profil</a>
                 </p>
            </article>
-           <article>
-                <h1 class="hidden">Candidat</h1>
-                <img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="110" height="138" />
-                <p>
-                    Journaliste, pianiste et ingénieur du son. J'ai travaillé comme journaliste au JT de la RTBF pour l'actualité nationale et internationale.
-                    <a href="./candidatNewton.html">Voir le profil</a>
-                </p>
-           </article>
-           <article>
-                <h1 class="hidden">Candidat</h1>
-                <img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="110" height="138" />
-                <p>
-                    Journaliste, pianiste et ingénieur du son. J'ai travaillé comme journaliste au JT de la RTBF pour l'actualité nationale et internationale.
-                    <a href="./candidatNewton.html">Voir le profil</a>
-                </p>
-           </article>
-           <article>
-                <h1 class="hidden">Candidat</h1>
-                <img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="110" height="138" />
-                <p>
-                    Journaliste, pianiste et ingénieur du son. J'ai travaillé comme journaliste au JT de la RTBF pour l'actualité nationale et internationale.
-                    <a href="./candidatNewton.html">Voir le profil</a>
-                </p>
-           </article>
-           <article>
-                <h1 class="hidden">Candidat</h1>
-                <img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="110" height="138" />
-                <p>
-                    Journaliste, pianiste et ingénieur du son. J'ai travaillé comme journaliste au JT de la RTBF pour l'actualité nationale et internationale.
-                    <a href="./candidatNewton.html">Voir le profil</a>
-                </p>
-           </article>
-           <article>
-                <h1 class="hidden">Candidat</h1>
-                <img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="110" height="138" />
-                <p>
-                    Journaliste, pianiste et ingénieur du son. J'ai travaillé comme journaliste au JT de la RTBF pour l'actualité nationale et internationale.
-                    <a href="./candidatNewton.html">Voir le profil</a>
-                </p>
-           </article>
-           <article>
-                <h1 class="hidden">Candidat</h1>
-                <img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="110" height="138" />
-                <p>
-                    Journaliste, pianiste et ingénieur du son. J'ai travaillé comme journaliste au JT de la RTBF pour l'actualité nationale et internationale.
-                    <a href="./candidatNewton.html">Voir le profil</a>
-                </p>
-           </article>
+        </section>
+        <section id="rechercheCandidats">
+            <h1>Filtrer par&nbsp;:</h1>
+            <ul>
+                <h2>Emploi</h2>
+                <li><a href="">Rédacteur</a></li>
+                <li><a href="">Rédacteur en chef</a></li>
+                <li><a href="">Journaliste photographe</a></li>
+                <h2>Province</h2>
+                <li><a href="">Anvers</a></li>
+                <li><a href="">Brabant flamand</a></li>
+                <li><a href="">Brabant wallon</a></li>
+                <li><a href="">Bruxelles</a></li>
+                <li><a href="">Flandre occidentale</a></li>
+                <li><a href="">Flandre orientale</a></li>
+                <li><a href="">Hainaut</a></li>
+                <li><a href="">Liège</a></li>
+                <li><a href="">Limbourg</a></li>
+                <li><a href="">Luxembourg</a></li>
+                <li><a href="">Namur</a></li>
+                <h2>Type de contrat</h2>
+                <li><a href="">CDD</a></li>
+                <li><a href="">CDI</a></li>
+                <li><a href="">Pigiste</a></li>
+            </ul>
         </section>
     	<footer>
             <div class="contact">
