--- a/site/index.html
+++ b/site/index.html
@@ -10,10 +10,7 @@
     	<header>
             <a class="logo" href="index.html"><img src="" alt="Logo de Media Spot" width="" height="" /></a>
             <h1>Media Spot</h1>
-            <p class="slogan">Unify the difference</p>
             <div>
-                <a id="inscription" href="./inscription.html">S'inscrire</a>
-                <p> ou </p>
                 <a id="connexion" href="./connexion.html">Se connecter</a> 
             </div>           
         </header>
@@ -25,6 +22,7 @@
     			<li><a href="./galerieCandidats.html">CVs</a></li>
     		</ul>
     	</nav>
+        <p id="slogan">On vous a dit qu'il n'y a pas de boulot dans la comm&hellip;<br />Et bien si&nbsp;!! Voyez par vous-même&nbsp;!!</p>
         <section id="recherche">
             <h1>Recherche</h1>
             <form method="" action="#">
@@ -47,49 +45,49 @@
             <h1>Les dernières offres</h1>
             <div class="offresImpaires">
                 <dl>
-                    <dt>Société&nbsp;: </dt><dd> b-com</dd><br />
-                    <dt>Contrat&nbsp;: </dt><dd> non précisé</dd><br />
-                    <dt>Poste&nbsp;: </dt><dd> Rédacteurs pour un nouveau projet de magazine. Ecriture d’article et interviews</dd>
+                    <dt>Société&nbsp;:&nbsp;</dt><dd>b-com</dd><br />
+                    <dt>Contrat&nbsp;:&nbsp;</dt><dd>non précisé</dd><br />
+                    <dt>Poste&nbsp;:&nbsp;</dt><dd>Rédacteurs pour un nouveau projet de magazine. Ecriture d’article et interviews</dd>
                 </dl>
                 <a href="./offreEverlasting.html">En savoir plus</a>
             </div>
             <div class="offresPaires">
                 <dl>
-                    <dt>Société&nbsp;: </dt><dd> Everlasting</dd><br />
-                    <dt>Contrat&nbsp;: </dt><dd> CDD - CDI</dd><br />
-                    <dt>Poste&nbsp;: </dt><dd>Conception, rédaction, tournage et montage de programmes télévisuels</dd>
+                    <dt>Société&nbsp;:&nbsp;</dt><dd> Everlasting</dd><br />
+                    <dt>Contrat&nbsp;:&nbsp;</dt><dd> CDD - CDI</dd><br />
+                    <dt>Poste&nbsp;:&nbsp;</dt><dd>Conception, rédaction, tournage et montage de programmes télévisuels</dd>
                 </dl>
                 <a href="./offreEverlasting.html">En savoir plus</a>
             </div>
             <div class="offresImpaires">
                 <dl>
-                    <dt>Société&nbsp;: </dt><dd> b-com</dd><br />
-                    <dt>Contrat&nbsp;: </dt><dd> non précisé</dd><br />
-                    <dt>Poste&nbsp;: </dt><dd> Rédacteurs pour un nouveau projet de magazine. Ecriture d’article et interviews</dd>
+                    <dt>Société&nbsp;:&nbsp;</dt><dd>b-com</dd><br />
+                    <dt>Contrat&nbsp;:&nbsp;</dt><dd>non précisé</dd><br />
+                    <dt>Poste&nbsp;:&nbsp;</dt><dd>Rédacteurs pour un nouveau projet de magazine. Ecriture d’article et interviews</dd>
                 </dl>
                 <a href="./offreEverlasting.html">En savoir plus</a>
             </div>
             <div class="offresPaires">
                 <dl>
-                    <dt>Société&nbsp;: </dt><dd> Everlasting</dd><br />
-                    <dt>Contrat&nbsp;: </dt><dd> CDD - CDI</dd><br />
-                    <dt>Poste&nbsp;: </dt><dd> Conception, rédaction, tournage et montage de programmes télévisuels</dd>
+                    <dt>Société&nbsp;:&nbsp;</dt><dd> Everlasting</dd><br />
+                    <dt>Contrat&nbsp;:&nbsp;</dt><dd> CDD - CDI</dd><br />
+                    <dt>Poste&nbsp;:&nbsp;</dt><dd>Conception, rédaction, tournage et montage de programmes télévisuels</dd>
                 </dl>
                 <a href="./offreEverlasting.html">En savoir plus</a>
             </div>
             <div class="offresImpaires">
                 <dl>
-                    <dt>Société&nbsp;: </dt><dd> b-com</dd><br />
-                    <dt>Contrat&nbsp;: </dt><dd> non précisé</dd><br />
-                    <dt>Poste&nbsp;: </dt><dd> Rédacteurs pour un nouveau projet de magazine. Ecriture d’article et interviews</dd>
+                    <dt>Société&nbsp;:&nbsp;</dt><dd>b-com</dd><br />
+                    <dt>Contrat&nbsp;:&nbsp;</dt><dd>non précisé</dd><br />
+                    <dt>Poste&nbsp;:&nbsp;</dt><dd>Rédacteurs pour un nouveau projet de magazine. Ecriture d’article et interviews</dd>
                 </dl>
                 <a href="./offreEverlasting.html">En savoir plus</a>
             </div>
             <div class="offresPaires">
                 <dl>
-                    <dt>Société&nbsp;: </dt><dd> Everlasting</dd><br />
-                    <dt>Contrat&nbsp;: </dt><dd> CDD - CDI</dd><br />
-                    <dt>Poste&nbsp;: </dt><dd> Conception, rédaction, tournage et montage de programmes télévisuels</dd>
+                    <dt>Société&nbsp;:&nbsp;</dt><dd> Everlasting</dd><br />
+                    <dt>Contrat&nbsp;:&nbsp;</dt><dd> CDD - CDI</dd><br />
+                    <dt>Poste&nbsp;:&nbsp;</dt><dd>Conception, rédaction, tournage et montage de programmes télévisuels</dd>
                 </dl>
                 <a href="./offreEverlasting.html">En savoir plus</a>
             </div>
@@ -98,27 +96,27 @@
             <h1>Les derniers inscrits</h1>
             <article>
                 <h1 class="hidden">Candidat</h1>
-                <a href="./candidatNewton.html"><img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="147" height="185" /></a>
+                <a href="./candidatNewton.html"><img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="73.5" height="92.5" /></a>
                 <p>Journaliste, pianiste et ingénieur du son</p>
             </article>
             <article>
                 <h1 class="hidden">Candidat</h1>
-                <a href="./candidatNewton.html"><img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="147" height="185" /></a>
+                <a href="./candidatNewton.html"><img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="73.5" height="92.5" /></a>
                 <p>Journaliste, pianiste et ingénieur du son</p>
             </article>
             <article>
                 <h1 class="hidden">Candidat</h1>
-                <a href="./candidatNewton.html"><img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="147" height="185" /></a>
+                <a href="./candidatNewton.html"><img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="73.5" height="92.5" /></a>
                 <p>Journaliste, pianiste et ingénieur du son</p>
             </article>
             <article>
                 <h1 class="hidden">Candidat</h1>
-                <a href="./candidatNewton.html"><img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="147" height="185" /></a>
+                <a href="./candidatNewton.html"><img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="73.5" height="92.5" /></a>
                 <p>Journaliste, pianiste et ingénieur du son</p>
             </article>
             <article>
                 <h1 class="hidden">Candidat</h1>
-                <a href="./candidatNewton.html"><img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="147" height="185" /></a>
+                <a href="./candidatNewton.html"><img src="./img/PhotoNewton.png" alt="Photo de Newton Pham Dang" width="73.5" height="92.5" /></a>
                 <p>Journaliste, pianiste et ingénieur du son</p>
             </article>
         </section>
