--- a/site/offresEmplois.html
+++ b/site/offresEmplois.html
@@ -10,11 +10,8 @@
     	<header>
             <a href="index.html"><img src="" alt="" width="" height="" /></a>
             <h1>Media Spot</h1>
-            <p class="slogan">Unify the difference</p>
             <div>
-                <a id="inscription" href="./inscription.html">S'inscrire</a>
-                <p> ou </p>
-                <a id="connexion" href="./connexion.html">Se connecter</a> 
+                <a id="connexion" href="./connexion.html">Se connecter</a>
             </div>           
         </header>
     	<nav class="principal">
@@ -26,89 +23,99 @@
     		</ul>
     	</nav>
     	<p class="ariane"><a href="./index.html">Accueil</a> &gt; <a href="">Offres</a></p>
-    	<section id="rechercheOffres">
-    		<h1>Trier par&nbsp;:</h1>
-    		<form method="" action="">
-    			<label class="emploi">Emploi</label>
-    			<select class="emploi">
-    				<option>Rédacteur</option>
-    				<option>Rédacteur en chef</option>
-    				<option>Journaliste photographe</option>
-    			</select>
-    			<label class="region">Région</label>
-    			<select class="region">
-    				<option>Liège</option>
-    				<option>Verviers</option>
-    				<option>Namur</option>
-    				<option>Charleroi</option>
-    				<option>Bruxelles</option>
-    			</select>
-    			<label class="contrat">Type de contrat</label>
-    			<select class="contrat">
-    				<option>CDD</option>
-    				<option>CDI</option>
-    				<option>Pigiste</option>
-    			</select>
-    			<input type="submit" value="ok" />
-    		</form>
-    	</section>
     	<section id="listeOffres">
             <h1>Les offres</h1>
-    		<article class="offresGauches">
+    		<article>
                 <h1 class="hidden">Article</h1>
     			<img src="./img/B-com.jpg" alt="Logo de l'entreprise ..." width="125" height="80" />
     			<dl>
-    				<dt>Société&nbsp;: </dt><dd>b-com</dd><br />
-    				<dt>Description du poste&nbsp;: </dt><dd>Rédacteurs pour un nouveau projet de magazine. Ecriture d’article et interviews</dd>
+    				<dt>Société&nbsp;:&nbsp;</dt><dd>B-com</dd><br />
+    				<dt>Poste&nbsp;:&nbsp;</dt><dd>Rédacteur</dd><br />
+                    <dt>Type de contrat&nbsp;:&nbsp;</dt><dd>Non spécifié</dd><br />
+                    <dt>Province&nbsp;:&nbsp;</dt><dd>Liège</dd>
     			</dl>
     			<p><a href="./offreEverlasting.html">Voir les détails</a></p>
     		</article>
-    		<article class="offresDroites offresEtroites">
+    		<article class="offresEtroites articleDroiteUn">
                 <h1 class="hidden">Article</h1>
     			<img src="./img/logo_everlasting.png" alt="Logo de l'entreprise ..." width="150" height="17" />
     			<dl>
-    				<dt>Société&nbsp;: </dt><dd>Everlasting</dd><br />
-    				<dt>Description du poste&nbsp;: </dt><dd>Il/elle participera à la conception, à la rédaction, au tournage et au montage de programmes télévisuels, sous la supervision d’un responsable Edito.</dd>
+    				<dt>Société&nbsp;:&nbsp;</dt><dd>Everlasting</dd><br />
+                    <dt>Poste&nbsp;:&nbsp;</dt><dd>Rédacteur, concepteur</dd><br />
+                    <dt>Type de contrat&nbsp;:&nbsp;</dt><dd>CDD - CDI</dd><br />
+                    <dt>Province&nbsp;:&nbsp;</dt><dd>Bruxelles</dd>
     			</dl>
     			<p><a href="./offreEverlasting.html">Voir les détails</a></p>
     		</article>
-    		<article class="offresGauches offresEtroites">
-                <h1 class="hidden">Article</h1>
-    			<img src="./img/logo_everlasting.png" alt="Logo de l'entreprise ..." width="150" height="17" />
-    			<dl>
-    				<dt>Société&nbsp;: </dt><dd>Everlasting</dd><br />
-    				<dt>Description du poste&nbsp;: </dt><dd>Il/elle participera à la conception, à la rédaction, au tournage et au montage de programmes télévisuels, sous la supervision d’un responsable Edito.</dd>
-    			</dl>
-    			<p><a href="./offreEverlasting.html">Voir les détails</a></p>
-    		</article>
-            <article class="offresDroites offresLarges">
+            <article>
                 <h1 class="hidden">Article</h1>
                 <img src="./img/B-com.jpg" alt="Logo de l'entreprise ..." width="125" height="80" />
                 <dl>
-                    <dt>Société&nbsp;: </dt><dd>b-com</dd><br />
-                    <dt>Description du poste&nbsp;: </dt><dd>Rédacteurs pour un nouveau projet de magazine. Ecriture d’article et interviews</dd>
+                    <dt>Société&nbsp;:&nbsp;</dt><dd>B-com</dd><br />
+                    <dt>Poste&nbsp;:&nbsp;</dt><dd>Rédacteur</dd><br />
+                    <dt>Type de contrat&nbsp;:&nbsp;</dt><dd>Non spécifié</dd><br />
+                    <dt>Province&nbsp;:&nbsp;</dt><dd>Liège</dd>
                 </dl>
                 <p><a href="./offreEverlasting.html">Voir les détails</a></p>
             </article>
-    		<article class="offresGauches">
-                <h1 class="hidden">Article</h1>
-    			<img src="./img/B-com.jpg" alt="Logo de l'entreprise ..." width="125" height="80" />
-    			<dl>
-    				<dt>Société&nbsp;: </dt><dd>b-com</dd><br />
-    				<dt>Description du poste&nbsp;: </dt><dd>Rédacteurs pour un nouveau projet de magazine. Ecriture d’article et interviews</dd>
-    			</dl>
-    			<p><a href="./offreEverlasting.html">Voir les détails</a></p>
-    		</article>
-    		<article class="offresDroites offresEtroites">
+    		<article class="offresEtroites articleDroiteDeux">
                 <h1 class="hidden">Article</h1>
     			<img src="./img/logo_everlasting.png" alt="Logo de l'entreprise ..." width="150" height="17" />
     			<dl>
-    				<dt>Société&nbsp;: </dt><dd>Everlasting</dd><br />
-    				<dt>Description du poste&nbsp;: </dt><dd>Il/elle participera à la conception, à la rédaction, au tournage et au montage de programmes télévisuels, sous la supervision d’un responsable Edito.</dd>
+    				<dt>Société&nbsp;:&nbsp;</dt><dd>Everlasting</dd><br />
+                    <dt>Poste&nbsp;:&nbsp;</dt><dd>Rédacteur, concepteur</dd><br />
+                    <dt>Type de contrat&nbsp;:&nbsp;</dt><dd>CDD - CDI</dd><br />
+                    <dt>Province&nbsp;:&nbsp;</dt><dd>Bruxelles</dd>
     			</dl>
     			<p><a href="./offreEverlasting.html">Voir les détails</a></p>
     		</article>
+    		<article>
+                <h1 class="hidden">Article</h1>
+    			<img src="./img/B-com.jpg" alt="Logo de l'entreprise ..." width="125" height="80" />
+    			<dl>
+    				<dt>Société&nbsp;:&nbsp;</dt><dd>B-com</dd><br />
+                    <dt>Poste&nbsp;:&nbsp;</dt><dd>Rédacteur</dd><br />
+                    <dt>Type de contrat&nbsp;:&nbsp;</dt><dd>Non spécifié</dd><br />
+                    <dt>Province&nbsp;:&nbsp;</dt><dd>Liège</dd>
+    			</dl>
+    			<p><a href="./offreEverlasting.html">Voir les détails</a></p>
+    		</article>
+    		<article class="offresEtroites articleDroiteTrois">
+                <h1 class="hidden">Article</h1>
+    			<img src="./img/logo_everlasting.png" alt="Logo de l'entreprise ..." width="150" height="17" />
+    			<dl>
+    				<dt>Société&nbsp;:&nbsp;</dt><dd>Everlasting</dd><br />
+                    <dt>Poste&nbsp;:&nbsp;</dt><dd>Rédacteur, concepteur</dd><br />
+                    <dt>Type de contrat&nbsp;:&nbsp;</dt><dd>CDD - CDI</dd><br />
+                    <dt>Province&nbsp;:&nbsp;</dt><dd>Bruxelles</dd>
+    			<p><a href="./offreEverlasting.html">Voir les détails</a></p>
+    		</article>
     	</section>
+        <section id="rechercheOffres">
+            <h1>Filtrer par&nbsp;:</h1>
+            <ul>
+                <h2>Emploi</h2>
+                <li><a href="">Rédacteur</a></li>
+                <li><a href="">Rédacteur en chef</a></li>
+                <li><a href="">Journaliste photographe</a></li>
+                <h2>Province</h2>
+                <li><a href="">Anvers</a></li>
+                <li><a href="">Brabant flamand</a></li>
+                <li><a href="">Brabant wallon</a></li>
+                <li><a href="">Bruxelles</a></li>
+                <li><a href="">Flandre occidentale</a></li>
+                <li><a href="">Flandre orientale</a></li>
+                <li><a href="">Hainaut</a></li>
+                <li><a href="">Liège</a></li>
+                <li><a href="">Limbourg</a></li>
+                <li><a href="">Luxembourg</a></li>
+                <li><a href="">Namur</a></li>
+                <h2>Type de contrat</h2>
+                <li><a href="">CDD</a></li>
+                <li><a href="">CDI</a></li>
+                <li><a href="">Pigiste</a></li>
+            </ul>
+        </section>
     	<footer>
             <div class="contact">
                 <h1>Contact</h1>
